@@ -37,6 +37,11 @@ CAVEATS :
  - new helper methods : 
    => ps : to get the list of running processes
    => cat file : to get the content of a file through the cat command. Useful when trying to get special linux file content 
+ - remote2Local(host:String, hport:Int) without local port specified; 
+   the port is automatically chosen and returned
+ - get access to a remote SSH through current SSH session
+   SSH.remote(options:SSHOptions):SSH
+   SSH.remote(remotePort:Int, options:SSHOptions)
    
  - TODO : trying to find a solution with SCP and some special linux file (with unknown file size)
  - TODO : manage when sftp submodule is not available => throw the right exception
